# ChangeLog for sys-kernel/mm-sources
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.56 2003/07/31 11:59:34 latexer Exp $

*mm-sources-2.6.0_beta2-r2 (31 Jul 2003)

  31 Jul 2003; Peter Johanson <latexer@gentoo.org>
  mm-sources-2.5.74-r1.ebuild, mm-sources-2.5.74-r2.ebuild,
  mm-sources-2.5.74-r3.ebuild, mm-sources-2.6.0_beta2-r2.ebuild:
  Bump and cleanup

*mm-sources-2.6.0_beta2-r1 (28 Jul 2003)

  28 Jul 2003; Peter Johanson <latexer@gentoo.org>
  mm-sources-2.6.0_beta2-r1.ebuild:
  Bumpity bump

*mm-sources-2.6.0_beta1-r2 (20 Jul 2003)

  20 Jul 2003; <sindian@gentoo.org> mm-sources-2.6.0_beta1-r2.ebuild:
  bumped to -mm2. includes con's scheduling tweaks.

  17 Jul 2003; <sindian@gentoo.org> mm-sources-2.6.0_beta1-r1.ebuild,
  files/wpadded.patch:
  Reversed the wpadded patch. This patch spits out tons of warnings about
  compiler-generated padding that we don't care about. Reversing this patch
  doesn't hurt anything. It just makes the gcc output much less terrifying.

*mm-sources-2.6.0_beta1-r1 (16 Jul 2003)

  16 Jul 2003; Peter Johanson <latexer@gentoo.org>
  mm-sources-2.5.73-r1.ebuild, mm-sources-2.5.73-r2.ebuild,
  mm-sources-2.5.73-r3.ebuild, mm-sources-2.6.0_beta1-r1.ebuild:
  Bump to 2.6.0-test1-mm1 (using _beta1 internally to make portage happy), and
  some cleanup of older stuff

*mm-sources-2.5.75-r1 (11 Jul 2003)

  11 Jul 2003; Brandon Low <lostlogic@gentoo.org> mm-sources-2.5.75-r1.ebuild:
  bump

*mm-sources-2.5.74-r3 (09 Jul 2003)

  09 Jul 2003; Peter Johanson <latexer@gentoo.org>
  mm-sources-2.5.74-r3.ebuild:
  Bump

*mm-sources-2.5.74-r2 (05 Jul 2003)

  05 Jul 2003; Brandon Low <lostlogic@gentoo.org> mm-sources-2.5.74-r2.ebuild:
  bump

*mm-sources-2.5.74-r1 (03 Jul 2003)

  03 Jul 2003; Peter Johanson <latexer@gentoo.org>
  mm-sources-2.5.74-r1.ebuild:
  Bump and cleanup

*mm-sources-2.5.73-r3 (02 Jul 2003)
