@@ -1,9 +1,9 @@
 MD5 f31654d3bc2df53af3be7ef99c0351a0 mm-sources-2.6.0_beta1-r2.ebuild 1097
 MD5 f63b6c8d584f48104a9dd65731999806 mm-sources-2.6.0_beta2-r1.ebuild 1097
-MD5 91cc71ffd672181ce7fac0ea3c441031 mm-sources-2.6.0_beta2-r3.ebuild 1097
+MD5 59e9e0fe3db22b4e7fcdb97462f92246 mm-sources-2.6.0_beta2-r3.ebuild 1097
 MD5 a2fa04ef5dff12be2c541a8e407758a1 mm-sources-2.6.0_beta1-r1.ebuild 1253
 MD5 91cc71ffd672181ce7fac0ea3c441031 mm-sources-2.6.0_beta2-r2.ebuild 1097
-MD5 126babdf3f9235d19734cfc2a42545e7 ChangeLog 9315
+MD5 cc469a998f6649d90a0cb9c7ffa6a2bb ChangeLog 9456
 MD5 f5051bf46b0cb3f14a41e4d668dd041d mm-sources-2.5.75-r1.ebuild 2703
 MD5 80e85d6efa72a547174fb64b8ad08a49 files/digest-mm-sources-2.5.75-r1 126
 MD5 c2a85ee37f0ce1076159ec64b7c5a78d files/wpadded.patch 1751
