@@ -1,0 +1,2 @@
+MD5 7d274d5fcd3d86a8d95c2749a702f830 linux-2.6.0-test2.tar.bz2 32969193
+MD5 af67e23648bf9e971cd97ca7989394a6 2.6.0-test2-mm3.bz2 2011280
