@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.56 2003/07/31 11:59:34 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/Attic/ChangeLog,v 1.57 2003/08/03 00:18:30 latexer Exp $
+
+*mm-sources-2.6.0_beta2-r3 (02 Aug 2003)
+
+  02 Aug 2003; Peter Johanson <latexer@gentoo.org>
+  mm-sources-2.6.0_beta2-r3.ebuild:
+  Bumparoo
 
 *mm-sources-2.6.0_beta2-r2 (31 Jul 2003)
 
